--- a/examples/RNOneSignal/android/app/build.gradle
+++ b/examples/RNOneSignal/android/app/build.gradle
@@ -136,6 +136,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
     compile project(':react-native-onesignal')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:27.1.0"
