--- a/examples/RNOneSignal/package.json
+++ b/examples/RNOneSignal/package.json
@@ -6,9 +6,13 @@
 		"start": "node node_modules/react-native/local-cli/cli.js start"
 	},
 	"dependencies": {
+		"@expo/vector-icons": "^6.3.1",
+		"eslint": "^4.0.0",
+		"native-base": "^2.6.1",
 		"react": "16.3.1",
 		"react-native": "0.55.4",
-      "react-native-onesignal": "3.2.1",
-      "eslint": "^4.0.0"
+		"react-native-elements": "^0.19.1",
+		"react-native-onesignal": "3.2.1",
+		"react-navigation": "^2.6.1"
 	}
 }
